--- a/client/src/index.html
+++ b/client/src/index.html
@@ -23,6 +23,9 @@
   rel="stylesheet"
 />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+<script src="https://cdn.gemini.ai/gemini.js"></script>
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
